# CSV_Cleaner

./: Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: Dockerfile  __init__.py  app.py  csv_clean_env_environment.py  requirements.txt
